res/examples/invalid/call_noncallable_range.eg
0..1();

// out: TypeError: range is not callable